# mental-health-sentiment-analysis

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
mental-health-sentiment-analysis/: __init__.py  dataset.py  features.py  plots.py
mental-health-sentiment-analysis/modeling/: predict.py  train.py
notebooks/: Cleaning_EDA_Features.ipynb  ModelBuilding.ipynb  main.ipynb
