[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mental-health-sentiment-analysis"
version = "0.0.1"
description = "Training machine learning models aimed at understanding and predicting mental health conditions based on textual data."
authors = [
  { name = "Krist\u00f3f N\u00e9meth" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["mental-health-sentiment-analysis"]
force_sort_within_sections = true
